--- a/index.html
+++ b/index.html
@@ -358,5 +358,6 @@
     <div class="overlay hidden"></div>
 
     <script src="index.js"></script>
+    <script src="welcome.js"></script>
   </body>
 </html>
