--- a/welcome.html
+++ b/welcome.html
@@ -12,6 +12,7 @@
     />
 
     <link rel="stylesheet" href="welcome.css" />
+    <script defer src="welcome.js"></script>
     <title>Bankist</title>
   </head>
   <body>
@@ -119,10 +120,19 @@
       </p>
     </main>
 
-    <!-- <footer>
-      &copy; by Jonas Schmedtmann. Don't claim as your own :)
-    </footer> -->
+    <footer>
+      <p class="footer__copyright">
+        &copy; Copyright by
+        <a
+          class="footer__link twitter-link"
+          target="_blank"
+          href="https://twitter.com/jonasschmedtman"
+          >Jonas Schmedtmann</a
+        >. Made from an UDEMY course. Use for learning or your portfolio. Don't
+        use to teach. Don't claim as your own product.
+      </p>
+    </footer>
 
-    <script src="welcome.js"></script>
+    
   </body>
 </html>
