--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="index.css" />
+    <script defer src="index.js"></script>
     <title>Bankist | When Banking meets Minimalist</title>
   </head>
   <body>
@@ -356,7 +357,5 @@
       </form>
     </div>
     <div class="overlay hidden"></div>
-
-    <script src="index.js"></script>
   </body>
 </html>
